--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
+
 @import 'purecss/build/base',
 		'purecss/build/buttons',
 		'purecss/build/forms',
