add fonts awesome brand

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,6 +14,7 @@ $font-family-base: 'Open Sans', sans-serif;
 @import "bootstrap/scss/_buttons";
 @import "bootstrap/scss/_grid";
 @import "bootstrap/scss/utilities/_flex";
+@import "bootstrap/scss/utilities/_float";
 
 .wrapper {
 	padding: 1em;
