--- a/src/styles/_dashboard.scss
+++ b/src/styles/_dashboard.scss
@@ -96,4 +96,14 @@ body {
 			margin-left: .5em;
 		}
 	}
+
+	&__footer {
+		font-size: .8em;
+		margin-top: 1em;
+		text-align: center;
+
+		a {
+			text-decoration: underline;
+		}
+	}
 }
