--- a/src/styles/_panels.scss
+++ b/src/styles/_panels.scss
@@ -5,6 +5,12 @@
 	&__header {
 		color: $white;
 		padding: .8rem 1rem;
+		display: block;
+
+		&:hover {
+			color: $white;
+			text-decoration: none;
+		}
 	}
 
 	&__status-list {
